deployments/container-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: tools
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: docker-registry
  type: ClusterIP
